--- a/fanarttvapi/pom.xml
+++ b/fanarttvapi/pom.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0"?>
-<project
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-    xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     
     <parent>
@@ -11,7 +9,7 @@
     </parent>
     <groupId>com.moviejukebox</groupId>
     <artifactId>fanarttvapi</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>Fanart.TV API</name>
 
     <issueManagement>
@@ -23,10 +21,10 @@
         <url>http://mediadeveloper.org:8080/job/API-FanartTV/</url>
     </ciManagement>
     <scm>
-        <connection>scm:svn:http://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</connection>
-        <developerConnection>scm:svn:https://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</developerConnection>
+        <connection>scm:svn:http://fanarttvapi.googlecode.com/svn/tags/fanarttvapi-1.0</connection>
+        <developerConnection>scm:svn:https://fanarttvapi.googlecode.com/svn/tags/fanarttvapi-1.0</developerConnection>
         <tag>HEAD</tag>
-        <url>http://code.google.com/p/fanarttvapi/source/browse/trunk/fanarttvapi</url>
+        <url>http://code.google.com/p/fanarttvapi/source/browse/tags/fanarttvapi-1.0</url>
     </scm>
 
     <properties>
