--- a/fanarttvapi/pom.xml
+++ b/fanarttvapi/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.moviejukebox</groupId>
     <artifactId>fanarttvapi</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
     <name>Fanart.TV API</name>
 
     <issueManagement>
@@ -21,10 +21,9 @@
         <url>http://mediadeveloper.org:8080/job/API-FanartTV/</url>
     </ciManagement>
     <scm>
-        <connection>scm:svn:http://fanarttvapi.googlecode.com/svn/tags/fanarttvapi-1.0</connection>
-        <developerConnection>scm:svn:https://fanarttvapi.googlecode.com/svn/tags/fanarttvapi-1.0</developerConnection>
-        <tag>HEAD</tag>
-        <url>http://code.google.com/p/fanarttvapi/source/browse/tags/fanarttvapi-1.0</url>
+        <connection>scm:svn:http://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</connection>
+        <developerConnection>scm:svn:https://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</developerConnection>
+        <url>http://code.google.com/p/fanarttvapi/source/browse/trunk/fanarttvapi</url>
     </scm>
 
     <properties>
