--- a/fanarttvapi/pom.xml
+++ b/fanarttvapi/pom.xml
@@ -18,7 +18,7 @@
     </issueManagement>
     
     <ciManagement>
-        <system>Hudson CI</system>
+        <system>Jenkins CI</system>
         <url>http://mediadeveloper.org:8080/job/API-FanartTV/</url>
     </ciManagement>
     
@@ -97,7 +97,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-gpg-plugin</artifactId>
-					<version>1.1</version>
+					<version>1.2</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -112,7 +112,7 @@
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>buildnumber-maven-plugin</artifactId>
-					<version>1.0-beta-4</version>
+					<version>1.0</version>
 				</plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -131,6 +131,7 @@
 					<revisionOnScmFailure>0000</revisionOnScmFailure>
 					<timestampFormat>{0,date,yyyy-MM-dd HH:mm:ss}</timestampFormat>
 				</configuration>
+				<version>1.0</version>
 				<executions>
 					<execution>
 						<phase>validate</phase>
@@ -143,6 +144,7 @@
 
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -154,6 +156,7 @@
 
 			<plugin>
 				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.1</version>
 				<configuration>
 					<archive>
 						<manifestEntries>
@@ -169,6 +172,7 @@
 			<!-- To skip tests by default -->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.8</version>
 				<configuration>
 					<skipTests>${skipTests}</skipTests>
 				</configuration>
