--- a/fanarttvapi/pom.xml
+++ b/fanarttvapi/pom.xml
@@ -1,85 +1,86 @@
 <?xml version="1.0"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    
-    <parent>
-        <groupId>org.sonatype.oss</groupId>
-        <artifactId>oss-parent</artifactId>
-        <version>6</version>
-    </parent>
-    <groupId>com.moviejukebox</groupId>
-    <artifactId>fanarttvapi</artifactId>
-    <version>1.1-SNAPSHOT</version>
-    <name>Fanart.TV API</name>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-    <issueManagement>
-        <system>Google Code</system>
-        <url>http://code.google.com/p/fanarttvapi/issues/list</url>
-    </issueManagement>
-    
-    <ciManagement>
-        <system>Jenkins CI</system>
-        <url>http://mediadeveloper.org:8080/job/API-FanartTV/</url>
-    </ciManagement>
-    
-    <scm>
-        <connection>scm:svn:http://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</connection>
-        <developerConnection>scm:svn:https://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</developerConnection>
-        <url>http://code.google.com/p/fanarttvapi/source/browse/trunk/fanarttvapi</url>
-    </scm>
+	<parent>
+		<groupId>org.sonatype.oss</groupId>
+		<artifactId>oss-parent</artifactId>
+		<version>6</version>
+	</parent>
+	<groupId>com.moviejukebox</groupId>
+	<artifactId>fanarttvapi</artifactId>
+	<version>1.1-SNAPSHOT</version>
+	<name>Fanart.TV API</name>
 
-    <properties>
+	<issueManagement>
+		<system>Google Code</system>
+		<url>http://code.google.com/p/fanarttvapi/issues/list</url>
+	</issueManagement>
+
+	<ciManagement>
+		<system>Jenkins CI</system>
+		<url>http://mediadeveloper.org:8080/job/API-FanartTV/</url>
+	</ciManagement>
+
+	<scm>
+		<connection>scm:svn:http://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</connection>
+		<developerConnection>scm:svn:https://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</developerConnection>
+		<url>http://code.google.com/p/fanarttvapi/source/browse/trunk/fanarttvapi</url>
+	</scm>
+
+	<properties>
 		<skipTests>true</skipTests>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<distribution.format>zip</distribution.format>
-    </properties>
+	</properties>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.5</version>
-                <scope>test</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>junit</groupId>
+				<artifactId>junit</artifactId>
+				<version>4.8.2</version>
+				<scope>test</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
-    <profiles>
-        <profile>
-            <id>release-sign-artifacts</id>
-            <activation>
-                <property>
-                    <name>performRelease</name>
-                    <value>true</value>
-                </property>
-            </activation>
-            <build>
-                <plugins>
-                    <plugin>
-                        <artifactId>maven-gpg-plugin</artifactId>
-                        <executions>
-                            <execution>
-                                <id>sign-artifacts</id>
-                                <phase>verify</phase>
-                                <goals>
-                                    <goal>sign</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
+	<profiles>
+		<profile>
+			<id>release-sign-artifacts</id>
+			<activation>
+				<property>
+					<name>performRelease</name>
+					<value>true</value>
+				</property>
+			</activation>
+			<build>
+				<plugins>
+					<plugin>
+						<artifactId>maven-gpg-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>sign-artifacts</id>
+								<phase>verify</phase>
+								<goals>
+									<goal>sign</goal>
+								</goals>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
+			</build>
+		</profile>
+	</profiles>
 
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-        </dependency>
-    </dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<pluginManagement>
@@ -109,6 +110,11 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.7.1</version>
 				</plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-antrun-plugin</artifactId>
+                    <version>1.6</version>
+                </plugin>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>buildnumber-maven-plugin</artifactId>
@@ -131,7 +137,6 @@
 					<revisionOnScmFailure>0000</revisionOnScmFailure>
 					<timestampFormat>{0,date,yyyy-MM-dd HH:mm:ss}</timestampFormat>
 				</configuration>
-				<version>1.0</version>
 				<executions>
 					<execution>
 						<phase>validate</phase>
@@ -143,8 +148,8 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
 				<configuration>
 					<source>1.6</source>
 					<target>1.6</target>
@@ -155,8 +160,8 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.3.1</version>
 				<configuration>
 					<archive>
 						<manifestEntries>
@@ -171,8 +176,8 @@
 
 			<!-- To skip tests by default -->
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.8</version>
 				<configuration>
 					<skipTests>${skipTests}</skipTests>
 				</configuration>
@@ -181,7 +186,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
-				<version>1.6</version>
 				<executions>
 					<execution>
 						<id>create-version-txt</id>
@@ -190,9 +194,12 @@
 							<target>
 								<property name="version_file" value="${project.build.directory}/version.txt" />
 								<property name="header_line" value="Fanart TV API${line.separator}" />
-								<property name="build_date_line" value="Build Date: ${timestamp}${line.separator}" />
-								<property name="version_line" value="Version: ${project.version}${line.separator}" />
-								<property name="revision_line" value="Revision: r${buildNumber}${line.separator}" />
+								<property name="build_date_line"
+									value="Build Date: ${timestamp}${line.separator}" />
+								<property name="version_line"
+									value="Version: ${project.version}${line.separator}" />
+								<property name="revision_line"
+									value="Revision: r${buildNumber}${line.separator}" />
 								<echo>Writing version file: ${version_file}</echo>
 								<echo file="${version_file}" append="false">${header_line}</echo>
 								<echo file="${version_file}" append="true">${build_date_line}</echo>
@@ -209,7 +216,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.2.1</version>
 				<executions>
 					<execution>
 						<id>distro-assembly</id>
