--- a/fanarttvapi/pom.xml
+++ b/fanarttvapi/pom.xml
@@ -14,7 +14,7 @@
 
     <groupId>com.moviejukebox</groupId>
     <artifactId>fanarttvapi</artifactId>
-    <version>1.3</version>
+    <version>1.4-SNAPSHOT</version>
     <name>API-Fanart.TV</name>
 
     <issueManagement>
@@ -28,9 +28,9 @@
     </ciManagement>
 
     <scm>
-        <connection>scm:svn:http://fanarttvapi.googlecode.com/svn/tags/fanarttvapi-1.3</connection>
-        <developerConnection>scm:svn:https://fanarttvapi.googlecode.com/svn/tags/fanarttvapi-1.3</developerConnection>
-        <url>http://code.google.com/p/fanarttvapi/source/browse/tags/fanarttvapi-1.3</url>
+        <connection>scm:svn:http://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</connection>
+        <developerConnection>scm:svn:https://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</developerConnection>
+        <url>http://code.google.com/p/fanarttvapi/source/browse/trunk/fanarttvapi</url>
     </scm>
 
     <properties>
