--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
@@ -12,14 +11,16 @@
         <maven>3.0.3</maven>
     </prerequisites>
 
-    <groupId>com.moviejukebox</groupId>
+    <groupId>com.omertron</groupId>
     <artifactId>fanarttvapi</artifactId>
     <version>1.4-SNAPSHOT</version>
-    <name>API-Fanart.TV</name>
+    <name>API-FanartTV</name>
+    <packaging>jar</packaging>
+    <description>API for the Fanart.TV website</description>
 
     <issueManagement>
-        <system>Google Code</system>
-        <url>http://code.google.com/p/fanarttvapi/issues/list</url>
+        <system>GitHub</system>
+        <url>https://github.com/Omertron/api-fanarttv/issues</url>
     </issueManagement>
 
     <ciManagement>
@@ -28,9 +29,9 @@
     </ciManagement>
 
     <scm>
-        <connection>scm:svn:http://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</connection>
-        <developerConnection>scm:svn:https://fanarttvapi.googlecode.com/svn/trunk/fanarttvapi</developerConnection>
-        <url>http://code.google.com/p/fanarttvapi/source/browse/trunk/fanarttvapi</url>
+        <url>scm:git:git@github.com:Omertron/api-fanarttv.git</url>
+        <connection>scm:git:git@github.com:Omertron/api-fanarttv.git</connection>
+        <developerConnection>scm:git:git@github.com:Omertron/api-fanarttv.git</developerConnection>
     </scm>
 
     <properties>
